	for names() which was withdrawn in 2.1.0).

    o	checkDocFiles() in package 'tools' now checks for bad \usage
	lines (syntactically invalid R code).

    o	dump() now skips missing objects with a warning rather than
	throw an error.

    o	Hexadecimal values are now allowed for as.numeric() and
	as.integer() on all platforms, and as integer constants in R code.


DEPRECATED & DEFUNCT

    o	Capability "IEEE754" is defunct.

    o	loadURL() is defunct: use load(url()).

    o	delay() is defunct: use delayedAssign() instead.

    o	The 'CRAN' argument to update.packages(), old.packages(),
	new.packages(), download.packages() and install.packages() is
	defunct in favour of 'repos'.


INSTALLATION

    o	LDFLAGS now defaults to -L/usr/local/lib64 on most Linux
	64-bit OSes (but not ia64).  The use of lib/lib64 can be
	overridden by the new variable LIBnn.

    o	The default installation directory is now ${prefix}/${LIBnn}/R,
	/usr/local/lib64/R on most 64-bit Linux OSes and /usr/local/lib/R
	elsewhere.

    o	The places where the doc, include and share directory trees are
	installed can be specified independently: see the R-admin manual.


PACKAGE INSTALLATION CHANGES

    o	The encoding for a packages' 00Index.html is chosen from the
	Encoding: field (if any) of the DESCRIPTION file and from the
	\encoding{} fields of any Rd files with non-ASCII titles.
	If there are conflicts, first-found wins with a warning.


C-LEVEL FACILITIES

    o	C function massdist() {called from density()} has new 2nd argument
	'xmass' (= weights).


BUG FIXES

    o	Printing was not allowing for double-width characters in its
	layout.

    o	Hershey fonts were printing as very small when printed from
	directly from Windows menu.

	Fix means that default size of Hershey fonts may be slightly
	different, for example, smaller by default on PostScript and PDF.



	**************************************************
	*						 *
	*	       2.1 SERIES NEWS			 *
	*						 *