@@ -100,7 +100,7 @@ void printRealVector(double *x, int n, int indx)
 	if (i > 0 && width + w > R_print.width) {
 	    DO_newline;
 	}
-	Rprintf("%s", EncodeReal(x[i], w, d, e));
+	Rprintf("%s", EncodeReal(x[i], w, d, e, OutDec));
 	width += w;
     }
     Rprintf("\n");
@@ -121,10 +121,10 @@ void printComplexVector(Rcomplex *x, int n, int indx)
 	    DO_newline;
 	}
 	if (ISNA(x[i].r) || ISNA(x[i].i))
-	    Rprintf("%s", EncodeReal(NA_REAL, w, 0, 0));
+	    Rprintf("%s", EncodeReal(NA_REAL, w, 0, 0, OutDec));
 	else
 	    Rprintf("%s", EncodeComplex(x[i], wr + R_print.gap , dr, er,
-					wi, di, ei));
+					wi, di, ei, OutDec));
 	width += w;
     }
     Rprintf("\n");
@@ -259,7 +259,7 @@ static void printNamedIntegerVector(int * x, int n, SEXP * names)
 
 static void printNamedRealVector(double * x, int n, SEXP * names)
     PRINT_N_VECTOR(INI_F_REAL,
-		   Rprintf("%s%*s", EncodeReal(x[k],w,d,e),R_print.gap,""))
+		   Rprintf("%s%*s", EncodeReal(x[k],w,d,e, OutDec),R_print.gap,""))
 
 #undef INI_F_CPLX
 #define INI_F_CPLX					\
@@ -278,15 +278,15 @@ static void printNamedComplexVector(Rcomplex * x, int n, SEXP * names)
 	{ /* PRINT_1 */
 	    if(j) Rprintf("%*s", R_print.gap, "");
 	    if (ISNA(x[j].r) || ISNA(x[j].i)) {
-		Rprintf("%s", EncodeReal(NA_REAL, w, 0, 0));
+		Rprintf("%s", EncodeReal(NA_REAL, w, 0, 0, OutDec));
 	    }
 	    else {
-		Rprintf("%s", EncodeReal(x[k].r, wr, dr, er));
+		Rprintf("%s", EncodeReal(x[k].r, wr, dr, er, OutDec));
 		P_IMAG_NA
 		if (x[k].i >= 0)
-		    Rprintf("+%si", EncodeReal(x[k].i, wi, di, ei));
+		    Rprintf("+%si", EncodeReal(x[k].i, wi, di, ei, OutDec));
 		else
-		    Rprintf("-%si", EncodeReal(-x[k].i, wi, di, ei));
+		    Rprintf("-%si", EncodeReal(-x[k].i, wi, di, ei, OutDec));
 	    }
 	})
 
